# VERDICT

./: .gitignore  LICENSE  Publications  README.md  index.md
.github/: dependabot.yml
docs/: README.md  release.txt
tools/: README.md  (+1 more)
tools/verdict-back-ends/soteria_pp/: Makefile  README.md  architectureSynthesis.ml  attackDefenseTree.ml  dune  dune-project  faultTree.ml  faultTreeSynthesis.ml  modeling.ml  qualitative-test.ml  qualitative.ml  quantitative-test.ml  quantitative.ml  soteria_pp.ml  soteria_pp.opam  translator.ml  translatorInputsValidation.ml  translatorPrint.ml  treeSynthesis-test.ml  treeSynthesis.ml  validation-tests.ml  validation.ml  visualization.ml
tools/verdict-back-ends/soteria_pp/examples/: .gitignore  ModelA1_1_ApplicableDefensesimplifiedADTree  ModelA1_1_ImplPropertysimplifiedADTree  ModelA1_2_ApplicableDefensesimplifiedADTree  ModelA1_2_ImplPropertysimplifiedADTree  andrews-pg-36-example.ml  header.txt  modelUnderTest-1_1-ApplicableDefense.ml  modelUnderTest-1_1-ImplProperty.ml  modelUnderTest-1_2-ApplicableDefense.ml  modelUnderTest-1_2-ImplProperty.ml  noAttack.ml  orbiter.ml  passing-exam-example.ml  sample_ADComp.ml  sample_FADComp.ml  system-breach-example.ml  top.ml  toy-adtree-example.ml
tools/verdict-back-ends/soteria_pp/examples/DeliveryDrone/: CAPEC.csv  CompDep.csv  CompSaf.csv  Defenses.csv  Defenses2NIST.csv  Events.csv  Mission.csv  ScnCompProps.csv  ScnConnections.csv
tools/verdict-back-ends/soteria_pp/examples/testDeliverDrone_WithBehaviour2/: CAPEC.csv  CompSaf.csv  Defenses.csv  Events.csv  Mission.csv  ScnArch.csv
(+1100 files in other folders)
